[gd_scene load_steps=9 format=3 uid="uid://b63snluv13jfb"]

[ext_resource type="Script" uid="uid://d20xk26tpbx3j" path="res://Scripts/character_sheet.gd" id="1_hrdcl"]
[ext_resource type="Texture2D" uid="uid://dnyukhjlmoufi" path="res://Assets/icon.svg" id="2_fg8ep"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5k3fm"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b766n"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.3655901, 0.36559013, 0.36558995, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 4
shadow_color = Color(0.09320182, 0.09320182, 0.09320182, 0.5)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fg8ep"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrdcl"]
bg_color = Color(0.529216, 0.16382661, 0.09128263, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 4
shadow_color = Color(0.03876, 0.03876, 0.03876, 0.5)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qv1ju"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwutc"]
bg_color = Color(0.61366725, 0.61365867, 0.6136609, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(0.03876, 0.03876, 0.03876, 0.5)
shadow_size = 2

[node name="CharacterSheet" type="PanelContainer" node_paths=PackedStringArray("CharacterNameLabel", "CharacterLevelLabel", "CharacterStatLabel", "CharacterHealthBar", "CharacterExpBar", "AtackBar")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -23.0
offset_right = 68.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 10
script = ExtResource("1_hrdcl")
CharacterNameLabel = NodePath("VBoxContainer2/VBoxContainer/HBoxContainer/CharacterName")
CharacterLevelLabel = NodePath("VBoxContainer2/VBoxContainer/HBoxContainer/Label")
CharacterStatLabel = NodePath("VBoxContainer2/CharacterStats")
CharacterHealthBar = NodePath("VBoxContainer2/VBoxContainer/HealthBar")
CharacterExpBar = NodePath("VBoxContainer2/VBoxContainer/ExpBar")
AtackBar = NodePath("ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_5k3fm")
theme_override_styles/fill = SubResource("StyleBoxFlat_b766n")
max_value = 1.0
value = 0.59
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_fg8ep")
expand_mode = 4
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BRIAN"

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Lvl1"

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_fg8ep")
theme_override_styles/fill = SubResource("StyleBoxFlat_hrdcl")
value = 31.38
fill_mode = 3
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_qv1ju")
theme_override_styles/fill = SubResource("StyleBoxFlat_qwutc")
value = 31.38
fill_mode = 3
show_percentage = false

[node name="CharacterStats" type="Label" parent="VBoxContainer2"]
visible = false
layout_mode = 2
text = "STR : 1
INT : 1
VIG : 1"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
